--- a/src/plugins/config/hidden_group.yaml
+++ b/src/plugins/config/hidden_group.yaml
@@ -1,8 +1,8 @@
 169909878:
-  戳一戳: true
+  戳一戳: d
 593456235:
-  戳一戳: true
+  戳一戳: d
 753376645:
-  戳一戳: true
+  戳一戳: d
 881054187:
-  戳一戳: true
+  戳一戳: d
