add change default (only for config-modify)

--- a/src/plugins/config/normal_group.yaml
+++ b/src/plugins/config/normal_group.yaml
@@ -1,12 +1,3 @@
-169909878:
-  echo: d
-  help: d
-  random: d
-  缩写: t
-  翻译: t
+169909878: {}
 753376645:
-  echo: d
-  help: d
-  random: d
-  缩写: t
-  翻译: f
+  echo: t
